# CAMP_open_ws

./: .gitignore  README.md  start_usdev.sh  test_video.py
src/franka_ft_sensor/netft_calib/: CMakeLists.txt  package.xml
src/franka_ft_sensor/netft_calib/config/: joint_cmds.txt  netft_calib_result.yaml
src/franka_ft_sensor/netft_calib/launch/: check_netft_calib.launch  load_netft_calib_result.launch  netft_init.launch  start_identification.launch  start_log_ftdata.launch  start_log_joint_states.launch
src/franka_ft_sensor/netft_calib/log/: position_data.txt  write_data_identify.txt
src/franka_ft_sensor/netft_calib/rviz/: netft_rviz_config.rviz
src/franka_ft_sensor/netft_calib/scripts/: data_aquisition.py  gui_netft_calib_log.py  identification.py  pub_calib_result.py
src/franka_handeye_cali/: README.md
src/franka_handeye_cali/config/: handeye_cali_results.yaml  handeye_cali_results.yaml_pHRI  handeye_cali_results_bak.yaml  handeye_cali_samples.txt
src/franka_handeye_cali/launch/: handeye_cali_identify.launch  handeye_cam_init.launch
src/franka_panda_moveit_config/: .setup_assistant
src/franka_panda_moveit_config/config/: panda.srdf  panda_arm.urdf
src/franka_panda_moveit_config/launch/: moveit.rviz  moveit_planning_execution.launch
src/franky_controller/: CMakeLists.txt  package.xml
src/franky_controller/launch/: franky_telecontrol.launch
src/franky_controller/scripts/: clean_launch_calib.sh  franky_controller_moveit.py  franky_controller_moveit_shell.py
src/franky_gui_suite/: CMakeLists.txt  package.xml  setup.py
src/franky_gui_suite/launch/: robot_ui_suite.launch
src/franky_gui_suite/scripts/: robot_ui_suite.py  robot_ui_suite.sh
src/franky_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/franky_moveit_config/config/: kinematics.yaml  panda.srdf  ros_controllers.yaml
src/franky_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/moveit_franky_bridge/: CMakeLists.txt  package.xml
src/moveit_franky_bridge/src/: moveit_result_to_franky_goal.py
src/openh_rosbag_recoder/: CMakeLists.txt  package.xml
src/openh_rosbag_recoder/cfg/: RecorderParams.cfg
src/openh_rosbag_recoder/config/: recorder_config.yaml
src/openh_rosbag_recoder/launch/: recorder.launch
src/openh_rosbag_recoder/scripts/: openh_recorder_node.py
src/panda_moveit_config/: .setup_assistant  package.xml
src/panda_moveit_config/config/: panda.srdf  ros_controllers.yaml
src/panda_moveit_config/description/: panda_arm.urdf  panda_arm.urdf.bak  panda_arm.urdf.vascular copy.bak
src/panda_moveit_config/launch/: gazebo.launch  planning_context.launch
src/rosbag_recoder/: CMakeLists.txt  package.xml
src/rosbag_recoder/config/: recorder.yaml
src/rosbag_recoder/src/: recorder_node.py
src/rosbag_traj_replayer/: CMakeLists.txt  package.xml
src/rosbag_traj_replayer/scripts/: replay_joint_states.py
src/usdev_framegrab/: CMakeLists.txt  package.xml  readme.md
src/usdev_framegrab/cfg/: FGDynParam.cfg  config.yaml  config_default.yaml  config_dy.yaml  config_peiliu.yaml  config_yingqi.yaml
src/usdev_framegrab/launch/: stream_usimg.launch  stream_usimg_dyncfg.launch
src/usdev_framegrab/scripts/: dynparam_utils.py  extract_images.py  notes.md  proc_conveximg.py  save_usimg.py  usdev_streaming.py
