<?xml version="1.0"?>
<package format="2">
  <name>moveit_franky_bridge</name>
  <version>0.0.1</version>
  <description>
    Bridge node: listen to MoveIt planning result and publish final joint target for Franky.
  </description>

  <maintainer email="peiliu0913@163.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
</package>
