<?xml version="1.0"?>
<package format="2">
  <name>openh_rosbag_recoder</name>
  <version>0.0.1</version>
  <description>A package to record rosbags based on a trigger topic and a dynamic switch.</description>

  <maintainer email="email@tum.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>

</package>