<?xml version="1.0"?>
<package format="2">
  <name>rosbag_traj_replayer</name>
  <version>0.0.1</version>
  <description>Replay JointState from rosbag to /joint_state_follower with a simple TUI.</description>

  <maintainer email="lpei82060@gmail.com">Pei Liu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- runtime deps -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
